[package]
name = "kala-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Common utilities and traits for the Kala blockchain"

[dependencies]
# Core serialization and utility dependencies
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Networking
tokio = { workspace = true, features = ["net", "sync", "time"] }

# Database operations
rocksdb = { workspace = true }

# Flatbuffers (conditional)
flatbuffers = { workspace = true, optional = true }
tempfile = "*"
[features]
default = ["flatbuffers"]
flatbuffers = ["dep:flatbuffers"]