[package]
name = "kala-state"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rocksdb = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
kala-vdf = { workspace = true }
tracing = { workspace = true }