[package]
name = "kala-tick"
version = "0.0.1"
edition = "2021"

[dependencies]
kala-common = {workspace = true}
num-bigint = {workspace = true}
num-integer = {workspace = true}
num-traits = {workspace = true}
rug = {workspace = true}
sha2 = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
bincode = {workspace = true}
thiserror = {workspace = true}
rand = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
hex = {workspace = true}

#Non workspace dependencies
sha3 = "0.10.8"
blake3 = "1.5"
rayon = "1.7"
parking_lot = "0.12"
zeroize = {version = "1.7", features = ["derive"]}
dashmap = "6.1.0"

[dev-dependencies]
once_cell = "1.20"
tracing-test = "0.2"
criterion = "0.7.0"

[[bench]]
name = "cvdf_benchmark"
harness = false

[[bin]]
name = "perf_analysis"
path = "src/bin/perf_analysis.rs"