[package]
name = "kala-transaction"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
kala-common = { workspace = true }
timelocks = { workspace = true }
flatbuffers = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }
rug = { workspace = true }
# Non-workspace dependencies
aes-gcm = "0.10"
rand = "0.9.2"
serde_json = "1.0"
serde-big-array = "0.5"

[build-dependencies]
flatc-rust = "0.2"
which = "8.0"

[dev-dependencies]
criterion = "0.7"

[features]
default = []
bench = []