[package]
name = "kala-vdf"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kala-common = { workspace = true }
tick = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
bincode = {workspace = true}


[build-dependencies]
bindgen = "0.72.0"
